💄CSS: fixed <App /> vertical spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
     
     max-width: var(--max-width);
 
-    padding: 0 0 var(--pad-sm) var(--nav-size);
+    padding: var(--pad-sm) var(--pad-sm) var(--pad-sm) var(--nav-size);
     margin-left: auto;
     margin-right: auto;
 }
